# accelerate-repa

./: .gitignore  AST_use.txt  README.md  accelerate-repa.cabal
Data/Array/Accelerate/: Repa.hs
Data/Array/Accelerate/Repa/: Evaluations.hs  RepaParsed.hs  Stencil.hs  Traverse.hs
Data/Array/Accelerate/Repa/Evaluations/: Acc.hs  Exp.hs  Fun.hs  Prim.hs
examples/: BlackScholes.hs  DotP.hs  Filter.hs  Fold.hs  Generate.hs  Index.hs  Map.hs  Permute.hs  Radix.hs  Replicate.hs  SASUM.hs  SAXPY.hs  Slice.hs  Unit.hs  Use.hs  ZipWith.hs  dump.hs
examples/operations/: 02_ArrayConstruction.hs  03_ShapeManipulation.hs  04_ExtractionSubarrays.hs  05_MaplikeFunctions.hs  06_Reductions.hs  07_ScanFunctions.hs  08_Permutations.hs  09_StencilOps.hs  11_ArraylevelFlowControl.hs  ArrayConstruction.hs  ScalarIntro.hs  ShapeManipulation.hs
