Name:             accelerate-repa
Version:          0.2
Cabal-version:    >= 1.6
Tested-with:      GHC == 7.2.1
Build-type:       Simple

Synopsis:         A back-end for the Accelerate library using the Repa library
Description:      A back-end for the Accelerate library using the Repa library
Author:           Benjamin Lambert-Smith
Maintainer:       Benjamin Lambert-Smith <blambo+github@gmail.com>
Homepage:         https://github.com/blambo/accelerate-repa
Bug-reports:      https://github.com/blambo/accelerate-repa/issues

Category:         Compilers/Interpreters, Concurrency, Data
Stability:        Experimental

Library
   Build-depends: repa == 2.*,
                  accelerate == 0.9.*,
                  base,
                  pretty == 1.1.*,
                  ghc-paths == 0.1.*,
                  ghc == 7.2.*,
                  directory == 1.1.*

   Exposed-modules: Data.Array.Accelerate.Repa
   Other-modules:   Data.Array.Accelerate.Repa.Evaluations
                    Data.Array.Accelerate.Repa.Evaluations.Prim
                    Data.Array.Accelerate.Repa.Traverse
                    Data.Array.Accelerate.Repa.Stencil
